0buy_ape_new.html

--- a/0buy_ape_new.html
+++ b/0buy_ape_new.html
@@ -24,7 +24,7 @@
                 <li class="main"><a href="">Services</a></li>
                 <li class="main"><a href="0contact_us_new.html">Contact us</a></li>
                 <a href="">
-                    <li class="login"> <img id="loginlogo" src="/images/login_logo.png" alt="error"> Dealer Login</li>
+                    <li class="login"> <img id="loginlogo" src="images/login_logo.png" alt="error"> Dealer Login</li>
                 </a>
                 <div class="searchbox"><input type="text" placeholder="Search this website"><button
                         id="btngo">Go</button></div>
